# celatura-desktop

./: .gitignore  Code_of_conduct.md  Contributing.md  LICENSE  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
Markdown_Notes/: Celatura_AI流式通信与工作区感知功能实现手记_20260723_010045.md  Celatura_Agent工具调用与本地终端控制台流式联动实施计划_20260723_152148.md  Celatura_Agent工具调用与本地终端控制台联动完成手记_20260723_153315.md  Celatura_CSS警告修复与IDE配置优化_20260723_004815.md  Celatura_Google用户自定义客户端凭证配置功能实现手记_20260723_030130.md  Celatura_Google网页OAuth2本地回调流实现手记_20260723_024930.md  Celatura_README生成记录_20260722_235604.md  Celatura_Tauri2宏冲突与CRC图标编译修复手记_20260723_020100.md  Celatura_Tauri2编译与BuildScript错误修复手记_20260723_014615.md  Celatura_多包管理器锁文件冲突修复与IDE配置手记_20260723_144045.md  Celatura_多模型凭证驱动架构重构与OAuth彻底清理手记_20260723_145410.md  Celatura_多模型凭证驱动架构重构实施计划_20260723_144655.md  Celatura_多模型路由中转与工作区感知流式通信架构实施计划_20260723_150723.md  Celatura_多模型路由中转与工作区感知通信手记_20260723_151145.md  Celatura_对话历史与工作区状态本地持久化仓储完成手记_20260723_162010.md  Celatura_对话历史与工作区状态本地持久化仓储实施计划_20260723_161328.md  Celatura_操作系统级DeepLink深层链接登录架构实现手记_20260723_032100.md  Celatura_核心架构与Google_OAuth2工程搭建_20260723_000504.md  Celatura_现阶段UI与应用服务走查测试报告_20260723_005345.md  Celatura_项目骨架与OAuth2完成走查报告_20260723_001042.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AuthCard.tsx  ChatStreamView.tsx  SettingsModal.tsx  Sidebar.tsx
tauri-app/src-tauri/: tauri.conf.json
